edits for json pipeline standards and teitok features added
